# SampleCLR

./: Makefile  README.md  evaluation_results.csv  pyproject.toml  submit_all_benchmarking_jobs.sh  top_evaluation_results.csv
configs/datasets/: combat.json  hlca.json  onek1k.json  stephenson.json
configs/models/: large.json  middle.json  tiny.json
environments/: rapids.yaml
experiments/: batch_correction.ipynb  benchmark_mixmil.ipynb  benchmark_multimil.ipynb  compute_priors.ipynb  create_train_test_splits.ipynb  evaluate_representations.ipynb  run_benchmark  spare_benchmark.py
src/sampleclr/: __init__.py  contrastive_model.py  datasets.py  losses.py  models.py  utils.py
